force-app/main/default/objects/WorkOrder/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <label>Amount Collected</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>