force-app/main/default/objects/WorkOrder/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Unpaid</fullName><default>true</default><label>Unpaid</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Partially Paid</fullName><default>false</default><label>Partially Paid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>