force-app/main/default/objects/WorkOrder/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <label>Reported Date</label>
    <type>Date</type>
    <description>Date the issue was reported (used to compute mean time to repair).</description>
    <inlineHelpText>Date the issue was reported.</inlineHelpText>
</CustomField>