force-app/main/default/objects/WorkOrder/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <label>Service Date</label>
    <type>Date</type>
    <description>Date the service call was completed (used for call-rate and repeat-visit analytics).</description>
    <inlineHelpText>Date the service call was completed.</inlineHelpText>
</CustomField>